--- a/main/res/xml/preferences_cachedetails.xml
+++ b/main/res/xml/preferences_cachedetails.xml
@@ -9,26 +9,31 @@
         android:defaultValue="true"
         android:key="@string/pref_friendlogswanted"
         android:summary="@string/init_summary_friends_and_own_logs_wanted"
-        android:title="@string/init_friends_and_own_logs_wanted" />
+        android:title="@string/init_friends_and_own_logs_wanted"
+        app:iconSpaceReserved="false" />
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="@string/pref_opendetailslastpage"
         android:summary="@string/init_summary_openlastdetailspage"
-        android:title="@string/init_openlastdetailspage" />
+        android:title="@string/init_openlastdetailspage"
+        app:iconSpaceReserved="false" />
     <CheckBoxPreference
         android:defaultValue="true"
         android:key="@string/pref_livelist"
         android:summary="@string/init_summary_livelist"
-        android:title="@string/init_livelist" />
+        android:title="@string/init_livelist"
+        app:iconSpaceReserved="false" />
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="@string/pref_global_wp_extraction_disable"
         android:title="@string/init_global_wp_extraction_disable"
-        android:summary="@string/init_summary_global_wp_extraction_disable" />
+        android:summary="@string/init_summary_global_wp_extraction_disable"
+        app:iconSpaceReserved="false" />
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="@string/pref_customtabs_as_browser"
         android:title="@string/init_customtabs_as_browser"
-        android:summary="@string/init_summary_customtabs_as_browser" />
+        android:summary="@string/init_summary_customtabs_as_browser"
+        app:iconSpaceReserved="false" />
 
 </PreferenceScreen>
