--- a/main/res/xml/preferences_appearence.xml
+++ b/main/res/xml/preferences_appearence.xml
@@ -12,23 +12,28 @@
         android:entryValues="@array/pref_theme_values"
         android:key="@string/pref_theme_setting"
         android:title="@string/settings_theme_title"
-        android:summary="%s" />
+        android:summary="%s"
+        app:iconSpaceReserved="false" />
     <CheckBoxPreference
         android:defaultValue="true"
         android:key="@string/pref_showaddress"
         android:summary="@string/init_summary_address"
-        android:title="@string/init_address" />
+        android:title="@string/init_address"
+        app:iconSpaceReserved="false" />
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="@string/pref_plainLogs"
         android:summary="@string/init_summary_plain_logs"
-        android:title="@string/init_plain_logs" />
+        android:title="@string/init_plain_logs"
+        app:iconSpaceReserved="false" />
     <ListPreference
         android:key="@string/pref_selected_language"
-        android:title="@string/init_select_language" />
+        android:title="@string/init_select_language"
+        app:iconSpaceReserved="false" />
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="@string/pref_units_imperial"
         android:summary="@string/init_summary_units"
-        android:title="@string/init_units" />
+        android:title="@string/init_units"
+        app:iconSpaceReserved="false" />
 </PreferenceScreen>
