--- a/main/res/xml/preferences_navigation.xml
+++ b/main/res/xml/preferences_navigation.xml
@@ -7,7 +7,8 @@
 
     <PreferenceCategory
         android:summary="@string/settings_summary_offline_routing"
-        android:title="@string/settings_title_offline_routing">
+        android:title="@string/settings_title_offline_routing"
+        app:iconSpaceReserved="false">
         <SeekBarPreference
             android:summary="@string/init_brouterThreshold_description"
             android:title="@string/init_brouterThreshold"
@@ -15,31 +16,36 @@
             android:key="@string/pref_brouterDistanceThreshold"
             android:max="@integer/brouter_threshold_max"
             android:min="1"
-            app:showSeekBarValue="true"/>
+            app:showSeekBarValue="true"
+            app:iconSpaceReserved="false"/>
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_brouterShowBothDistances"
             android:summary="@string/init_summary_brouterShowBothDistances"
-            android:title="@string/init_brouterShowBothDistances" />
+            android:title="@string/init_brouterShowBothDistances"
+            app:iconSpaceReserved="false" />
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_useInternalRouting"
             android:summary="@string/init_summary_useInternalRouting"
-            android:title="@string/init_useInternalRouting" />
+            android:title="@string/init_useInternalRouting"
+            app:iconSpaceReserved="false" />
 
         <Preference
             android:dependency="@string/pref_useInternalRouting"
             android:key="@string/pref_persistablefolder_routingtiles"
-            android:title="@string/init_brouter_directory_description" />
+            android:title="@string/init_brouter_directory_description"
+            app:iconSpaceReserved="false" />
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:dependency="@string/pref_useInternalRouting"
             android:key="@string/pref_brouterAutoTileDownloads"
             android:summary="@string/init_brouterAutoTileDownloads_description"
-            android:title="@string/init_autoDownloads" />
+            android:title="@string/init_autoDownloads"
+            app:iconSpaceReserved="false" />
 
         <SeekBarPreference
             android:summary="@string/init_updateinterval_description"
@@ -49,50 +55,69 @@
             android:key="@string/pref_brouterAutoTileDownloadsInterval"
             android:max="@integer/brouter_updateinterval_max"
             android:min="0"
-            app:showSeekBarValue="true"/>
+            app:showSeekBarValue="true"
+            app:iconSpaceReserved="false"/>
 
         <ListPreference
             android:dialogTitle="@string/init_brouterProfileWalk"
             android:key="@string/pref_brouterProfileWalk"
-            android:title="@string/init_brouterProfileWalk" />
+            android:title="@string/init_brouterProfileWalk"
+            app:iconSpaceReserved="false" />
         <ListPreference
             android:dialogTitle="@string/init_brouterProfileBike"
             android:key="@string/pref_brouterProfileBike"
-            android:title="@string/init_brouterProfileBike" />
+            android:title="@string/init_brouterProfileBike"
+            app:iconSpaceReserved="false" />
         <ListPreference
             android:defaultValue="car-eco.brf"
             android:dialogTitle="@string/init_brouterProfileCar"
             android:key="@string/pref_brouterProfileCar"
-            android:title="@string/init_brouterProfileCar" />
+            android:title="@string/init_brouterProfileCar"
+            app:iconSpaceReserved="false" />
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/init_default_navigation_tool">
-        <Preference app:summary="@string/init_default_navigation_tool_description" />
+    <PreferenceCategory
+        android:title="@string/init_default_navigation_tool"
+        app:iconSpaceReserved="false">
+        <Preference
+            app:summary="@string/init_default_navigation_tool_description"
+            app:iconSpaceReserved="false" />
         <ListPreference
             android:defaultValue="0"
             android:dialogTitle="@string/init_default_navigation_tool_select"
             android:key="@string/pref_defaultNavigationTool"
-            android:title="@string/init_default_navigation_tool_select" />
+            android:title="@string/init_default_navigation_tool_select"
+            app:iconSpaceReserved="false" />
         <!-- default value is NavigationAppFactory.NavigationAppsEnum.COMPASS -->
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/init_secondary_navigation_tool">
-        <Preference app:summary="@string/init_default_navigation_tool_2_description" />
+    <PreferenceCategory
+        android:title="@string/init_secondary_navigation_tool"
+        app:iconSpaceReserved="false">
+        <Preference
+            app:summary="@string/init_default_navigation_tool_2_description"
+            app:iconSpaceReserved="false" />
         <ListPreference
             android:defaultValue="2"
             android:dialogTitle="@string/init_default_navigation_tool_select"
             android:key="@string/pref_defaultNavigationTool2"
-            android:title="@string/init_default_navigation_tool_select" />
+            android:title="@string/init_default_navigation_tool_select"
+            app:iconSpaceReserved="false" />
         <!-- default value is NavigationAppFactory.NavigationAppsEnum.INTERNAL_MAP -->
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_title_navigation_menu">
-        <Preference app:summary="@string/init_navigation_menu_description" />
+    <PreferenceCategory
+        android:title="@string/settings_title_navigation_menu"
+        app:iconSpaceReserved="false">
+        <Preference
+            app:summary="@string/init_navigation_menu_description"
+            app:iconSpaceReserved="false" />
 
         <!-- Navigation Navigation -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceNavigationNavigationFragment"
-            app:title="@string/settings_title_navigation_menu" />
+            app:title="@string/settings_title_navigation_menu"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 </PreferenceScreen>
