--- a/main/res/xml/preferences_services.xml
+++ b/main/res/xml/preferences_services.xml
@@ -4,91 +4,114 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:icon="?attr/settings_cloud"
     app:title="@string/settings_title_services"
-    app:key="@string/preference_screen_services" >
-    <PreferenceCategory android:title="@string/settings_category_geocaching_platform" >
+    app:key="@string/preference_screen_services">
+    <PreferenceCategory
+        android:title="@string/settings_category_geocaching_platform"
+        app:iconSpaceReserved="false" >
 
         <!-- Geocaching.com -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceGeocachingComFragment"
-            app:title="@string/settings_title_gc"/>
+            app:title="@string/settings_title_gc"
+            app:iconSpaceReserved="false"/>
 
         <!-- Geocaching.com Adventure Lab -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceGeocachingComAdventureLabsFragment"
-            app:title="@string/settings_title_lc" />
+            app:title="@string/settings_title_lc"
+            app:iconSpaceReserved="false" />
 
         <!-- Opencaching.de -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceOpencachingDeFragment"
-            app:title="@string/init_oc" />
+            app:title="@string/init_oc"
+            app:iconSpaceReserved="false" />
 
         <!-- Opencaching.pl -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceOpencachingPlFragment"
-            app:title="@string/init_oc_pl" />
+            app:title="@string/init_oc_pl"
+            app:iconSpaceReserved="false" />
 
         <!-- Opencaching.nl -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceOpencachingNlFragment"
-            app:title="@string/init_oc_nl" />
+            app:title="@string/init_oc_nl"
+            app:iconSpaceReserved="false" />
 
         <!-- Opencaching.us -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceOpencachingUsFragment"
-            app:title="@string/init_oc_us" />
+            app:title="@string/init_oc_us"
+            app:iconSpaceReserved="false" />
 
         <!-- Opencaching.ro -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceOpencachingRoFragment"
-            app:title="@string/init_oc_ro" />
+            app:title="@string/init_oc_ro"
+            app:iconSpaceReserved="false" />
 
         <!-- Opencache.uk -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceOpencacheUkFragment"
-            app:title="@string/init_oc_uk" />
+            app:title="@string/init_oc_uk"
+            app:iconSpaceReserved="false" />
 
         <!-- Extremcaching.com -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceExtremcachingComFragment"
-            app:title="@string/settings_title_ec" />
+            app:title="@string/settings_title_ec"
+            app:iconSpaceReserved="false" />
 
         <!-- Geocaching.su -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceGeocachingSuFragment"
-            app:title="@string/init_su" />
+            app:title="@string/init_su"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_category_geocaching_additionals" >
+    <PreferenceCategory
+        android:title="@string/settings_category_geocaching_additionals"
+        app:iconSpaceReserved="false" >
 
         <!-- Gcvote.com -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceGcvoteComFragment"
-            app:title="@string/init_gcvote" />
+            app:title="@string/init_gcvote"
+            app:iconSpaceReserved="false" />
 
         <!-- Geokrety.org -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceGeokretyOrgFragment"
-            app:title="@string/init_geokrety" />
+            app:title="@string/init_geokrety"
+            app:iconSpaceReserved="false" />
 
         <!-- Send2cgeo -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceSendToCgeoFragment"
-            app:title="@string/init_sendToCgeo" />
+            app:title="@string/init_sendToCgeo"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_category_social" >
+    <PreferenceCategory
+        android:title="@string/settings_category_social"
+        app:iconSpaceReserved="false" >
 
         <!-- Twitter -->
         <Preference
             app:fragment="cgeo.geocaching.settings.fragments.PreferenceServiceTwitterFragment"
-            app:title="@string/init_twitter" />
+            app:title="@string/init_twitter"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_category_browser" >
+    <PreferenceCategory
+        android:title="@string/settings_category_browser"
+        app:iconSpaceReserved="false" >
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_nativeUa"
             android:summary="@string/init_summary_use_native_ua"
-            android:title="@string/init_use_native_ua" />
+            android:title="@string/init_use_native_ua"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 </PreferenceScreen>
