--- a/main/res/menu/cache_list_options.xml
+++ b/main/res/menu/cache_list_options.xml
@@ -30,6 +30,11 @@
         android:title="@string/caches_select_invert"
         app:showAsAction="ifRoom|withText"/>
     <item
+        android:id="@+id/menu_select_next"
+        android:icon="@drawable/ic_menu_select_next"
+        android:title="@string/caches_select_next"
+        app:showAsAction="ifRoom|withText"/>
+    <item
         android:id="@+id/menu_cache_list_app"
         android:icon="@drawable/ic_menu_navigate"
         android:title="@null"
