--- a/main/res/menu/view_settings.xml
+++ b/main/res/menu/view_settings.xml
@@ -4,6 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <item
+        android:id="@+id/menu_gosearch"
+        android:icon="@drawable/ic_menu_search"
+        android:title="@string/search_bar_hint"
+        app:iconifiedByDefault="true"
+        app:showAsAction="collapseActionView|always" />
+
+    <item
         android:id="@+id/view_settings_edit"
         android:icon="@drawable/ic_menu_edit"
         android:title="@string/activate_editmode_title"
