--- a/main/res/menu/view_settings.xml
+++ b/main/res/menu/view_settings.xml
@@ -6,7 +6,8 @@
     <item
         android:id="@+id/menu_gosearch"
         android:icon="@drawable/ic_menu_search"
-        android:title="@string/search_bar_hint"
+        android:title="@string/search_bar_hint_settings"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:iconifiedByDefault="true"
         app:showAsAction="collapseActionView|always" />
 
